added Cyverse support

--- a/setup.ipynb
+++ b/setup.ipynb
@@ -26,61 +26,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: pandas in /home/oberon/.local/lib/python3.11/site-packages (2.1.0)\n",
-      "Requirement already satisfied: numpy>=1.23.2 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (1.25.2)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/oberon/.local/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.11/site-packages (2.1.1)\n",
+      "Requirement already satisfied: numpy>=1.23.2 in /opt/conda/lib/python3.11/site-packages (from pandas) (1.24.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /opt/conda/lib/python3.11/site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: numpy in /home/oberon/.local/lib/python3.11/site-packages (1.25.2)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.11/site-packages (1.24.4)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: whoosh in /home/oberon/.local/lib/python3.11/site-packages (2.7.4)\n",
+      "Requirement already satisfied: whoosh in /opt/conda/lib/python3.11/site-packages (2.7.4)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: nltk in /home/oberon/.local/lib/python3.11/site-packages (3.8.1)\n",
-      "Requirement already satisfied: tqdm in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (4.66.1)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (2023.12.25)\n",
-      "Requirement already satisfied: joblib in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (1.3.2)\n",
-      "Requirement already satisfied: click in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (8.1.7)\n",
+      "Requirement already satisfied: nltk in /opt/conda/lib/python3.11/site-packages (3.8.1)\n",
+      "Requirement already satisfied: click in /opt/conda/lib/python3.11/site-packages (from nltk) (8.1.7)\n",
+      "Requirement already satisfied: joblib in /opt/conda/lib/python3.11/site-packages (from nltk) (1.3.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /opt/conda/lib/python3.11/site-packages (from nltk) (2024.4.16)\n",
+      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.11/site-packages (from nltk) (4.66.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting sklearn\n",
-      "  Using cached sklearn-0.0.post12.tar.gz (2.6 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[15 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
-      "  \u001b[31m   \u001b[0m rather than 'sklearn' for pip commands.\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m Here is how to fix this error in the main use cases:\n",
-      "  \u001b[31m   \u001b[0m - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
-      "  \u001b[31m   \u001b[0m - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
-      "  \u001b[31m   \u001b[0m   (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
-      "  \u001b[31m   \u001b[0m - if the 'sklearn' package is used by one of your dependencies,\n",
-      "  \u001b[31m   \u001b[0m   it would be great if you take some time to track which package uses\n",
-      "  \u001b[31m   \u001b[0m   'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
-      "  \u001b[31m   \u001b[0m - as a last resort, set the environment variable\n",
-      "  \u001b[31m   \u001b[0m   SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m More information is available at\n",
-      "  \u001b[31m   \u001b[0m https://github.com/scikit-learn/sklearn-pypi-package\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
-      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
+      "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.11/site-packages (1.3.1)\n",
+      "Requirement already satisfied: numpy<2.0,>=1.17.3 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (1.24.4)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (1.11.3)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (1.3.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (3.2.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -90,7 +57,7 @@
     "%pip install numpy\n",
     "%pip install whoosh\n",
     "%pip install nltk\n",
-    "%pip install sklearn"
+    "%pip install scikit-learn"
    ]
   },
   {
@@ -103,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package wordnet to /home/oberon/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to /home/jovyan/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
@@ -143,6 +110,8 @@
    },
    "outputs": [],
    "source": [
+    "from env import env\n",
+    "\n",
     "import os\n",
     "import pandas as pd\n",
     "import re\n",
@@ -230,52 +199,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Howard Hughes</td>\n",
-       "      <td>CATEGORIES: Howard Hughes, 1905 births, 1976 d...</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Continuum Hypothesis</td>\n",
+       "      <td>CATEGORIES: Forcing (mathematics), Independenc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Hook Of Holland</td>\n",
-       "      <td>CATEGORIES: Rotterdam, Boroughs of Rotterdam, ...</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Çevik Bir</td>\n",
+       "      <td>CATEGORIES: 1939 births, People from Izmir, Li...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Hugh Binning</td>\n",
-       "      <td>CATEGORIES: 1627 births, 1653 deaths, Scottish...</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Collectivism</td>\n",
+       "      <td>CATEGORIES: Collectivism, Collaboration, Corpo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Henry Home, Lord Kames</td>\n",
-       "      <td>CATEGORIES: 1696 births, 1782 deaths, 18th-cen...</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Nepeta</td>\n",
+       "      <td>CATEGORIES: Lamiaceae, Flora of Africa, Flora ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Harwich</td>\n",
-       "      <td>CATEGORIES: Harwich, Port cities and towns in ...</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Cumin</td>\n",
+       "      <td>CATEGORIES: Edible Apiaceae, Medicinal plants ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  file_id                   title  \\\n",
-       "0    0014           Howard Hughes   \n",
-       "1    0014         Hook Of Holland   \n",
-       "2    0014            Hugh Binning   \n",
-       "3    0014  Henry Home, Lord Kames   \n",
-       "4    0014                 Harwich   \n",
+       "  file_id                 title  \\\n",
+       "0    0006  Continuum Hypothesis   \n",
+       "1    0006             Çevik Bir   \n",
+       "2    0006          Collectivism   \n",
+       "3    0006                Nepeta   \n",
+       "4    0006                 Cumin   \n",
        "\n",
        "                                                text  \n",
-       "0  CATEGORIES: Howard Hughes, 1905 births, 1976 d...  \n",
-       "1  CATEGORIES: Rotterdam, Boroughs of Rotterdam, ...  \n",
-       "2  CATEGORIES: 1627 births, 1653 deaths, Scottish...  \n",
-       "3  CATEGORIES: 1696 births, 1782 deaths, 18th-cen...  \n",
-       "4  CATEGORIES: Harwich, Port cities and towns in ...  "
+       "0  CATEGORIES: Forcing (mathematics), Independenc...  \n",
+       "1  CATEGORIES: 1939 births, People from Izmir, Li...  \n",
+       "2  CATEGORIES: Collectivism, Collaboration, Corpo...  \n",
+       "3  CATEGORIES: Lamiaceae, Flora of Africa, Flora ...  \n",
+       "4  CATEGORIES: Edible Apiaceae, Medicinal plants ...  "
       ]
      },
      "execution_count": 5,
@@ -284,7 +253,7 @@
     }
    ],
    "source": [
-    "wiki_dir = \"./data/wiki\"\n",
+    "wiki_dir = \"./raw_data/wiki\" # this directory is only stored locally\n",
     "data = {\"file_id\": [], \"title\": [], \"text\": []}\n",
     "redirects = {\"file_id\": [], \"title\": [], \"text\": [], \"redirect\": []}\n",
     "for fname in [f for f in os.listdir(wiki_dir) if not f.startswith(\"._\")]:\n",
@@ -345,42 +314,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Hydroelectric Plant</td>\n",
-       "      <td>#REDIRECT Hydroelectricity\\n\\n\\n</td>\n",
-       "      <td>Hydroelectricity</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Capitalist</td>\n",
+       "      <td>#REDIRECT Capitalism\\n\\n\\n</td>\n",
+       "      <td>Capitalism</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Horse Breed</td>\n",
-       "      <td>#REDIRECT List of horse breeds\\n\\n\\n</td>\n",
-       "      <td>List of horse breeds</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Cross Cutting</td>\n",
+       "      <td>#REDIRECT Cross-cutting\\n\\n\\n</td>\n",
+       "      <td>Cross-cutting</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Horse Breeds</td>\n",
-       "      <td>#REDIRECT list of horse breeds\\n\\n\\n</td>\n",
-       "      <td>list of horse breeds</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Monetary Policy Of Central Banks</td>\n",
+       "      <td>#REDIRECT Monetary policy\\n\\n\\n</td>\n",
+       "      <td>Monetary policy</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Melody Dominated Homophony</td>\n",
-       "      <td>#REDIRECT Homophony\\n\\n\\n</td>\n",
-       "      <td>Homophony</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Cryptography/Hashfunction</td>\n",
+       "      <td>#REDIRECT Hash function\\n\\n\\n</td>\n",
+       "      <td>Hash function</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0014</td>\n",
-       "      <td>Historic List Of Cities Of Europe</td>\n",
-       "      <td>#REDIRECT List of largest European cities in h...</td>\n",
-       "      <td>List of largest European cities in history</td>\n",
+       "      <td>0006</td>\n",
+       "      <td>Cryptography/Key</td>\n",
+       "      <td>#REDIRECT Key (cryptography)\\n\\n\\n</td>\n",
+       "      <td>Key (cryptography)</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -388,26 +357,19 @@
        "</div>"
       ],
       "text/plain": [
-       "  file_id                              title  \\\n",
-       "0    0014                Hydroelectric Plant   \n",
-       "1    0014                        Horse Breed   \n",
-       "2    0014                       Horse Breeds   \n",
-       "3    0014         Melody Dominated Homophony   \n",
-       "4    0014  Historic List Of Cities Of Europe   \n",
+       "  file_id                             title  \\\n",
+       "0    0006                        Capitalist   \n",
+       "1    0006                     Cross Cutting   \n",
+       "2    0006  Monetary Policy Of Central Banks   \n",
+       "3    0006         Cryptography/Hashfunction   \n",
+       "4    0006                  Cryptography/Key   \n",
        "\n",
-       "                                                text  \\\n",
-       "0                   #REDIRECT Hydroelectricity\\n\\n\\n   \n",
-       "1               #REDIRECT List of horse breeds\\n\\n\\n   \n",
-       "2               #REDIRECT list of horse breeds\\n\\n\\n   \n",
-       "3                          #REDIRECT Homophony\\n\\n\\n   \n",
-       "4  #REDIRECT List of largest European cities in h...   \n",
-       "\n",
-       "                                     redirect  redirect_index  \n",
-       "0                            Hydroelectricity              -1  \n",
-       "1                        List of horse breeds              -1  \n",
-       "2                        list of horse breeds              -1  \n",
-       "3                                   Homophony              -1  \n",
-       "4  List of largest European cities in history              -1  "
+       "                                 text            redirect  redirect_index  \n",
+       "0          #REDIRECT Capitalism\\n\\n\\n          Capitalism              -1  \n",
+       "1       #REDIRECT Cross-cutting\\n\\n\\n       Cross-cutting              -1  \n",
+       "2     #REDIRECT Monetary policy\\n\\n\\n     Monetary policy              -1  \n",
+       "3       #REDIRECT Hash function\\n\\n\\n       Hash function              -1  \n",
+       "4  #REDIRECT Key (cryptography)\\n\\n\\n  Key (cryptography)              -1  "
       ]
      },
      "execution_count": 6,
@@ -440,7 +402,7 @@
     {
      "data": {
       "text/plain": [
-       "(151589, 126231)"
+       "(64211, 53084)"
       ]
      },
      "execution_count": 7,
@@ -449,8 +411,8 @@
     }
    ],
    "source": [
-    "wiki_df.to_pickle(\"./data/wiki.pkl\")\n",
-    "wiki_redirects_df.to_pickle(\"./data/wiki_redirects.pkl\")\n",
+    "wiki_df.to_pickle(f\"{env.data_dir}/wiki.pkl\")\n",
+    "wiki_redirects_df.to_pickle(f\"{env.data_dir}/wiki_redirects.pkl\")\n",
     "\n",
     "len(wiki_df.index), len(wiki_redirects_df.index)"
    ]
@@ -552,7 +514,7 @@
     }
    ],
    "source": [
-    "with open(\"./data/questions.txt\", \"r\") as file:\n",
+    "with open(\"./raw_data/questions.txt\", \"r\") as file:\n",
     "    questions = file.read().rstrip(\"\\n\").split(\"\\n\\n\")\n",
     "data = {\"category\": [], \"question\": [], \"answer\": []}\n",
     "for question in questions:\n",
@@ -571,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "questions_df.to_pickle(\"./data/questions.pkl\")"
+    "questions_df.to_pickle(f\"{env.data_dir}/questions.pkl\")"
    ]
   },
   {
@@ -584,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ae73efff",
    "metadata": {},
    "outputs": [],
@@ -604,7 +566,7 @@
     "\n",
     "del count_matrix, total_counts, terms, count_vectorizer # clean up memory\n",
     "\n",
-    "with open(\"data/term_counts.pkl\", \"wb\") as file:\n",
+    "with open(f\"{env.data_dir}/term_counts.pkl\", \"wb\") as file:\n",
     "    pickle.dump(term_counts, file)"
    ]
   }
@@ -625,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
