--- a/watson_attempt1.ipynb
+++ b/watson_attempt1.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query"
+    "from env import env\n",
+    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query # importing from shared takes a few seconds"
    ]
   },
   {
@@ -69,15 +70,15 @@
     "        return RegexTokenizer() | LowercaseFilter() | LemmatizeFilter()\n",
     "    \n",
     "    def _build_index(self):\n",
-    "        if exists_in(\"data/index\"):\n",
-    "            ix = open_dir(\"data/index\")\n",
+    "        if exists_in(env.index_path):\n",
+    "            ix = open_dir(env.index_path)\n",
     "        else:\n",
-    "            os.mkdir(\"data/index\")\n",
+    "            os.mkdir(env.index_path)\n",
     "            schema = Schema(title=ID(stored=True),  \n",
     "                    titles=TEXT(analyzer=self._analyzer), \n",
     "                    categories=TEXT(analyzer=self._analyzer), \n",
     "                    content=TEXT(analyzer=self._analyzer))\n",
-    "            ix = create_in(\"data/index\", schema)\n",
+    "            ix = create_in(env.index_path, schema)\n",
     "            with ix.writer() as writer:\n",
     "                for _, row in wiki_df.iterrows():\n",
     "                    writer.add_document(title=row.title, content=row.text)\n",
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95661e01",
+   "id": "12dfafd3",
    "metadata": {},
    "source": [
     "## Ideas for increasing score (for attempt 2)\n",
@@ -401,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
