--- a/watson_attempt2.ipynb
+++ b/watson_attempt2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "15a2236b",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query"
+    "from env import env\n",
+    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query # importing from shared takes a few seconds"
    ]
   },
   {
@@ -65,7 +66,7 @@
     "def query_ChatGPT(query):\n",
     "    import requests\n",
     "\n",
-    "    model = \"gpt-3.5-turbo-0301\" # TODO\n",
+    "    model = \"gpt-3.5-turbo-0301\"\n",
     "\n",
     "    headers = {\n",
     "        \"Content-Type\": \"application/json\",\n",
@@ -204,14 +205,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16416ab3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "548f9a34",
    "metadata": {},
@@ -237,15 +230,15 @@
     "        return RegexTokenizer() | LowercaseFilter() | LemmatizeFilter()\n",
     "    \n",
     "    def _build_index(self):\n",
-    "        if exists_in(\"data/index\"):\n",
-    "            ix = open_dir(\"data/index\")\n",
+    "        if exists_in(env.index_path):\n",
+    "            ix = open_dir(env.index_path)\n",
     "        else:\n",
-    "            os.mkdir(\"data/index\")\n",
+    "            os.mkdir(env.index_path)\n",
     "            schema = Schema(title=ID(stored=True),  \n",
     "                    titles=TEXT(analyzer=self._analyzer), \n",
     "                    categories=TEXT(analyzer=self._analyzer), \n",
     "                    content=TEXT(analyzer=self._analyzer))\n",
-    "            ix = create_in(\"data/index\", schema)\n",
+    "            ix = create_in(env.index_path, schema)\n",
     "            with ix.writer() as writer:\n",
     "                for _, row in wiki_df.iterrows():\n",
     "                    writer.add_document(title=row.title, content=row.text)\n",
@@ -415,15 +408,12 @@
    "metadata": {},
    "source": [
     "### TODO\n",
-    "- Write README\n",
-    "- Remove wiki files from repo\n",
-    "- upload index to dropbox and other pkl files\n",
-    "- Ask ChatGPT to add quotes around terms that should be together\n",
+    "- Update CLI description and copy to README\n",
+    "- Share data file in Cyverse\n",
     "- Ask ChatGPT to rerank final results\n",
     "- Finish Watson attempt 2\n",
     "- Update scores in report\n",
-    "- Figure out meeting for project\n",
-    "- Write about shared.py in report"
+    "- Create presentation"
    ]
   }
  ],
@@ -443,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
