--- a/watson_attempt2.ipynb
+++ b/watson_attempt2.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import shutil\n",
     "import json\n",
     "\n",
     "from whoosh.fields import Schema, TEXT, ID\n",
@@ -233,6 +234,8 @@
     "        if exists_in(env.index_path):\n",
     "            ix = open_dir(env.index_path)\n",
     "        else:\n",
+    "            if os.path.exists(env.index_path):\n",
+    "                shutil.rmtree(env.index_path)\n",
     "            os.mkdir(env.index_path)\n",
     "            schema = Schema(title=ID(stored=True),  \n",
     "                    titles=TEXT(analyzer=self._analyzer), \n",
